<?xml version="1.0"?>
<package>
  <name>romi_interface</name>
  <version>0.1.0</version>
  <description>Package for interfacing with the Pololu Romi board.</description>

  <author email="brad@lowellmakes.com">Brad Powers</author>
  <maintainer email="brad@lowellmakes.com">Brad Powers</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python-smbus<build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>python-smbus<run_depend>

</package>
