<?xml version="1.0"?>
<package format="2">
  <name>romi_interface</name>
  <version>0.1.0</version>
  <description>Package for interfacing with the Pololu Romi board.</description>

  <author email="brad@lowellmakes.com">Brad Powers</author>
  <maintainer email="brad@lowellmakes.com">Brad Powers</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>python-smbus</depend>

</package>
